# tp_01

./: Cargo.toml
assets/animation/: player01.anim_ske.json  player01_sm.ron  player01_tex.json
assets/tiled/: 01.json  01.tmx
src/: README.md  main.rs
src/game/: loading.rs  mod.rs  playing.rs
src/game/libs/: dragon_loader.rs  dragon_models.rs  mod.rs  tiled_map.rs
