[package]
name = "tp_01"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/jpeg",
    "bevy/x11",
    "bevy/filesystem_watcher",
]

dev = ["bevy/dynamic"]

[dependencies]

# 
tracing = "0.1.36"

# 其它
anyhow = { version = "^1.0.60" }
rand = { version = "^0.8.5" }
regex = { version = "^1.6.0" }
lazy_static = { version = "^1.4.0" }

serde = { version = "^1.0.143", features = ["derive"] }

serde_json = { version = "1.0.83" }

ron = { version = "^0.7" }

# bevy
bevy = { version = "^0.8", default-features = false, features = [] }

# bevy 插件

# 资源载入
bevy_asset_loader = { version = "0.12.0", features = ["2d"] }

# 相机
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }

# 物理引擎
bevy_rapier2d = { version = "^0.16.0", features = [
    "serde-serialize",
    "enhanced-determinism",
    "debug-render",
] }

# 地图
bevy_ecs_tilemap = { version = "^0.7" }
tiled = { version = "0.10.2", default-features = false }


bevy-inspector-egui = { version = "^0.12.1" }

bevy_embedded_assets = { version = "^0.4.0" }


evalexpr = { version = "^8.1.0", features = ["serde_support"] }

[dev-dependencies]
